force-app/main/default/objects/NTB_Person__c/NTB_Person__c.object-meta.xml
<CustomObject>
    <label>日東紡マテ_パーソンシート</label>
    <nameField>
        <label>パーソンシートコード文字列</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>