force-app/main/default/objects/NTB_Person__c/fields/Field127__c.field-meta.xml
<CustomField>
    <fullName>Field127__c</fullName>
    <label>紹介元</label>
    <length>255</length>
    <type>Text</type>
</CustomField>