force-app/main/default/objects/NTB_Person__c/fields/Field171__c.field-meta.xml
<CustomField>
    <fullName>Field171__c</fullName>
    <label>受取日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>