force-app/main/default/objects/NTB_Person__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field832__c</columns>
    <columns>Field496__c</columns>
    <columns>Field730__c</columns>
    <columns>Field709__c</columns>
    <columns>Field291__c</columns>
    <columns>Field864__c</columns>
    <columns>Field766__c</columns>
    <columns>Field986__c</columns>
    <columns>Field919__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>